XMLtoCSV/objects/unpackaged/objects/Campaign_Target_vod__c.object
<CustomObject>
    <description>Stores the accounts that are linked to a parent campaign.</description>
    <fields>
        <fullName>Campaign_vod__c</fullName>
        <description>Reference to the parent campaign.</description>
        <label>Campaign</label>
        <referenceTo>Campaign_vod__c</referenceTo>
        <relationshipLabel>Campaign Targets</relationshipLabel>
        <relationshipName>Campaign_Targets</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_Id_vod__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique key field that prevents duplicate accounts from being added to the same campaign.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>Field used by VMobile.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Target_Account_vod__c</fullName>
        <description>Reference to the targeted account.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaign Targets</relationshipLabel>
        <relationshipName>Campaign_Target_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Campaign Target</label>
    <nameField>
        <displayFormat>CTN-{0000000}</displayFormat>
        <label>Campaign Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>